// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test OrderRisk should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <span
            class="ant-typography"
          >
            projectManage.projectOverview.orderRisk.title
          </span>
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/project/default/order"
          >
            common.showMore
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-small ant-table-empty ant-table-fixed-header"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-header"
                  style="overflow: hidden;"
                >
                  <table
                    style="table-layout: fixed;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          projectManage.projectOverview.orderRisk.tableColumn.name
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          projectManage.projectOverview.orderRisk.tableColumn.status
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          projectManage.projectOverview.orderRisk.tableColumn.time
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          projectManage.projectOverview.orderRisk.tableColumn.createUser
                        </th>
                      </tr>
                    </thead>
                  </table>
                </div>
                <div
                  class="ant-table-body"
                  style="overflow-y: scroll; max-height: 302px;"
                >
                  <table
                    style="table-layout: fixed;"
                  >
                    <colgroup />
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="4"
                        >
                          <div
                            class="ant-empty ant-empty-normal"
                          >
                            <div
                              class="ant-empty-image"
                            >
                              <svg
                                class="ant-empty-img-simple"
                                height="41"
                                viewBox="0 0 64 41"
                                width="64"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <g
                                  fill="none"
                                  fill-rule="evenodd"
                                  transform="translate(0 1)"
                                >
                                  <ellipse
                                    class="ant-empty-img-simple-ellipse"
                                    cx="32"
                                    cy="33"
                                    rx="32"
                                    ry="7"
                                  />
                                  <g
                                    class="ant-empty-img-simple-g"
                                    fill-rule="nonzero"
                                  >
                                    <path
                                      d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                    />
                                    <path
                                      class="ant-empty-img-simple-path"
                                      d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                    />
                                  </g>
                                </g>
                              </svg>
                            </div>
                            <div
                              class="ant-empty-description"
                            >
                              No data
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test OrderRisk should match snapshot 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <span
            class="ant-typography"
          >
            projectManage.projectOverview.orderRisk.title
          </span>
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/project/default/order"
          >
            common.showMore
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-table-wrapper"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-small ant-table-fixed-header"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-header"
                  style="overflow: hidden;"
                >
                  <table
                    style="table-layout: fixed; visibility: hidden;"
                  >
                    <colgroup />
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell"
                        >
                          projectManage.projectOverview.orderRisk.tableColumn.name
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          projectManage.projectOverview.orderRisk.tableColumn.status
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          projectManage.projectOverview.orderRisk.tableColumn.time
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          projectManage.projectOverview.orderRisk.tableColumn.createUser
                        </th>
                      </tr>
                    </thead>
                  </table>
                </div>
                <div
                  class="ant-table-body"
                  style="overflow-y: scroll; max-height: 302px;"
                >
                  <table
                    style="table-layout: fixed;"
                  >
                    <colgroup />
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        style="height: 0px; font-size: 0px;"
                      >
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                        <td
                          style="padding: 0px; border: 0px; height: 0px;"
                        >
                          <div
                            style="height: 0px; overflow: hidden;"
                          >
                             
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="123"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <a
                            href="/project/default/order/123"
                          >
                            test
                          </a>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            class="ant-tag ant-tag-orange"
                          >
                            order.status.exec_failed
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          2022-06-09 08:11:52
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          admin
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test OrderRisk should render error message 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <span
            class="ant-typography"
          >
            projectManage.projectOverview.orderRisk.title
          </span>
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/project/default/order"
          >
            common.showMore
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-result ant-result-error"
      >
        <div
          class="ant-result-icon"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-result-title"
        >
          common.request.noticeFailTitle
        </div>
        <div
          class="ant-result-subtitle"
        >
          error
        </div>
      </div>
    </div>
  </div>
</div>
`;
